[gd_scene load_steps=2 format=3 uid="uid://ci2caxh3csp1g"]

[ext_resource type="Script" uid="uid://dyancneuxidjt" path="res://scenes/LevelHUD.gd" id="1_0ycnv"]

[node name="LevelHUD" type="CanvasLayer"]
script = ExtResource("1_0ycnv")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -108.0
offset_right = 424.0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TotalLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2

[node name="TotalXPBar" type="ProgressBar" parent="Panel/VBox"]
custom_minimum_size = Vector2(100, -200)
layout_mode = 2

[node name="RangeLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
